--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": "^8.3",
         "illuminate/console": "^12.0",
-        "illuminate/database": "*",
+        "illuminate/database": "12.0",
         "illuminate/filesystem": "^12.0"
     },
     "require-dev": {
